[metadata]
name = stealth
version = 0.1
summary = Impersonated Authentication wrap on Openstack Keystone
author = Xuan Yu


[files]

packages =
    stealth

[nosetests]

match=^test
where=./
with-coverage=true
cover-package=stealth
cover-erase=1
cover-inclusive=true
cover-branches=true
#cover-min-percentage=100
